--- a/bib/itip-refs.bib
+++ b/bib/itip-refs.bib
@@ -210,7 +210,7 @@
 }
 
 @INCOLLECTION{2005:ruggeri,
-  author = {F. Ruggeri and D. R\'{\i}os Insua and J. Mart\'{\i}n},
+  author = {Ruggeri, F. and R\'{\i}os Insua, D. and Mart\'{\i}n, J.},
   title = {Robust {B}ayesian Analysis},
   booktitle = {Handbook of Statistics. Bayesian Thinking: Modeling and Computation},
   publisher = {Elsevier},
@@ -223,4 +223,13 @@
   issn = {0169-7161}
 }
 
+@incollection{itip-desirable,
+    author    = "Erik Quaeghebeur",
+    title     = "Desirability",
+    booktitle = "Introduction to Imprecise Probabilities",
+    publisher = "Wiley",
+    year      = "2013",
+    note      = "In preparation",
+    editor    = "Frank P.A. Coolen and Matthias C. M. Troffaes and Thomas Augustin and Gert de Cooman",
+}
 
