diss: bibliography stuff

--- a/bib/eigene.bib
+++ b/bib/eigene.bib
@@ -86,7 +86,6 @@
   pages =     {391--400},
   publisher = {SIPTA},
   url = {http://www.sipta.org/isipta11/proceedings/046.html},
-  note = {\url{http://www.sipta.org/isipta11/proceedings/046.html}},
 }
 
 @INPROCEEDINGS{Troffaes2012a,
@@ -108,18 +107,17 @@
   number = 131,
   institution = {Department of Statistics, LMU Munich},
   url = {http://epub.ub.uni-muenchen.de/14068/},
-  note = {\url{http://epub.ub.uni-muenchen.de/14068/}},
 }
 
 @misc{Troffaes2013a,
     Author = {Matthias C. M. Troffaes and Gero Walter and Dana L. Kelly},
     Title = {A Robust {B}ayesian Approach to Modelling Epistemic Uncertainty in Common-Cause Failure Models},
-    note = {Submitted to: Reliability Engineering \& System Safety},
+    note = {Accepted for publication at: Reliability Engineering \& System Safety},
     Pages = {},
     Volume = {},
     Month = {January},
     Year = {2013},
-    howpublished = {Available at \url{http://arxiv.org/abs/1301.0533}},
+    howpublished = {Preprint available at \url{http://arxiv.org/abs/1301.0533}},
 }
 
 @incollection{itip-statinf,
@@ -132,7 +130,7 @@
     editor    = "Frank P.A. Coolen and Matthias C. M. Troffaes and Thomas Augustin and Gert de Cooman",
 }
 
-@incollection{itip,
+@collection{itip,
     title = "Introduction to Imprecise Probabilities",
     publisher = "Wiley",
     year      = "2013",
