--- a/bib/itip-refs.bib
+++ b/bib/itip-refs.bib
@@ -44,7 +44,7 @@
     Year = {1968}}
 
 @book{2002:casella,
-  title={Statistical inference},
+  title={Statistical Inference},
   author={Casella, G. and Berger, R.L.},
   isbn={9780534243128},
   lccn={89027287},
