--- a/head.tex
+++ b/head.tex
@@ -12,8 +12,9 @@
 %\usepackage{natbib}
 %\usepackage[nottoc,numbib]{tocbibind}
 \usepackage{paralist}
+\usepackage{csquotes}
 
-\usepackage[backend=bibtex,style=authoryear,dashed=false]{biblatex}
+\usepackage[backend=bibtex,style=authoryear,maxbibnames=4,minbibnames=4,block=space,backref=true,dashed=false]{biblatex}
 \addbibresource{bib/eigene.bib}
 \addbibresource{bib/itip-refs.bib}
 \addbibresource{bib/other-refs.bib}
