diss: notes for related concepts

--- a/genbayesinf.tex
+++ b/genbayesinf.tex
@@ -524,8 +524,9 @@ in particular in the context of prior-data conflict (see Section~\ref{sec:imprec
 
 \subsection{Related Concepts}
 
-many links to concepts that aim to complement probability theory as tool for handling uncertainty,
-like possibilistic reasoning, fuzzy probabilities, etc.
+There are many links to other concepts that aim to complement probability theory as tool for handling uncertainty.
+like possibilistic reasoning, fuzzy (probability) measures (also known as capacities),
+different sorts of neighbourhood models, etc. (itip-ch.\ 5,6)
 
 
 
