diss: more notes for related concepts

--- a/genbayesinf.tex
+++ b/genbayesinf.tex
@@ -528,6 +528,19 @@ There are many links to other concepts that aim to complement probability theory
 like possibilistic reasoning, fuzzy (probability) measures (also known as capacities),
 different sorts of neighbourhood models, etc. (itip-ch.\ 5,6)
 
+many can be seen as special cases of lower previsions
+or sets of probability distributions,
+i.e., restricted versions of them. (itip-ch.\ 5,6)
+
+nevertheless useful, as more easy to handle, elicit,
+more easy to understand.
+
+hierarchical Bayes, distribution over intervals:
+uncertainty is averaged out for inferences,
+posterior state of knowledge is again expressed via precise distribution (was sagt Walley?)\\
+better alternative: hierarchical model by Cattaneo,
+where a possibility distribution is used for info about parameters,
+interpretation as likelihood, profile lik (itip-inference)
 
 
 
