diss: some more notes for related concepts

--- a/genbayesinf.tex
+++ b/genbayesinf.tex
@@ -535,6 +535,9 @@ i.e., restricted versions of them. (itip-ch.\ 5,6)
 nevertheless useful, as more easy to handle, elicit,
 more easy to understand.
 
+some concepts are used in a way that does not warrant
+the step beyound precise probability distributions.
+
 hierarchical Bayes, distribution over intervals:
 uncertainty is averaged out for inferences,
 posterior state of knowledge is again expressed via precise distribution (was sagt Walley?)\\
