diss: related concepts notes

--- a/bib/itip-refs.bib
+++ b/bib/itip-refs.bib
@@ -233,3 +233,23 @@
     editor    = "Frank P.A. Coolen and Matthias C. M. Troffaes and Thomas Augustin and Gert de Cooman",
 }
 
+@incollection{itip-special,
+    author    = "S\'{e}bastian Destercke and Didier Dubois",
+    title     = "Special Cases",
+    booktitle = "Introduction to Imprecise Probabilities",
+    publisher = "Wiley",
+    year      = "2013",
+    note      = "In preparation",
+    editor    = "Frank P.A. Coolen and Matthias C. M. Troffaes and Thomas Augustin and Gert de Cooman",
+}
+
+@incollection{itip-other,
+    author    = "S\'{e}bastian Destercke and Didier Dubois",
+    title     = "Other Uncertainty Theories based on Capacities",
+    booktitle = "Introduction to Imprecise Probabilities",
+    publisher = "Wiley",
+    year      = "2013",
+    note      = "In preparation",
+    editor    = "Frank P.A. Coolen and Matthias C. M. Troffaes and Thomas Augustin and Gert de Cooman",
+}
+
