--- a/genbayesinf.tex
+++ b/genbayesinf.tex
@@ -524,19 +524,28 @@ in particular in the context of prior-data conflict (see Section~\ref{sec:imprec
 
 \subsection{Related Concepts}
 
-There are many links to other concepts that aim to complement probability theory as tool for handling uncertainty.
-like possibilistic reasoning, fuzzy (probability) measures (also known as capacities),
-different sorts of neighbourhood models, etc. (itip-ch.\ 5,6)
+The theory outlined*** in Sections~\ref{sec:ip-main} and \ref{sec:imprecisebayes}
+is not the only attempt to complement probability theory as tool for handling uncertainty;
+there are many other concepts with a similar aim,
+like possibilistic reasoning, fuzzy (probability) measures, which are also known as capacities,
+or different sorts of neighbourhood models considered in robust Bayesian approaches. ***citations?*** %***(itip-ch.\ 5,6)***
 
-many can be seen as special cases of lower previsions
-or sets of probability distributions,
-i.e., restricted versions of them. (itip-ch.\ 5,6)
+In fact, many of these concepts are closely linked to
+lower previsions or sets of probability distributions,
+and a large part can be seen as special cases of generic lower previsions, 
+or sets of probability distributions with certain restrictions%
+\footnote{A considerable part of the imprecise probability literature
+explores these links, of which \textcite{itip-special,itip-other}
+give a good overview.}. %***(itip-ch.\ 5,6)***
+
+example for link?***
 
 nevertheless useful, as more easy to handle, elicit,
 more easy to understand.
 
 some concepts are used in a way that does not warrant
-the step beyound precise probability distributions.
+the step beyond precise probability distributions.
+e.g., fuzzy sets with certain combination rule is same as probability.***
 
 hierarchical Bayes, distribution over intervals:
 uncertainty is averaged out for inferences,
