diss: density ratio class

--- a/bib/itip-refs.bib
+++ b/bib/itip-refs.bib
@@ -223,6 +223,31 @@
   issn = {0169-7161}
 }
 
+@ARTICLE{1994:berger,
+  author = {Berger, J. and Moreno, E. and Pericchi, L. and Bayarri, M. and Bernardo,
+	J. M. and Cano, J. and De la Horra, J. and Mart{\'\i}n, J. and R{\'\i}os-Ins{\'u}a,
+	D. and Betr{\`o}, B. and Dasgupta, A. and Gustafson, P. and Wasserman,
+	L. and Kadane, J. and Srinivasan, C. and Lavine, M. and O'Hagan,
+	A. and Polasek, W. and Robert, C. and Goutis, C. and Ruggeri, F.
+	and Salinetti, G. and Sivaganesan, S.},
+  title = {An overview of robust {B}ayesian analysis},
+  journal = {TEST},
+  year = {1994},
+  volume = {3},
+  pages = {5--124},
+}
+
+@ARTICLE{2011:rinderknecht,
+  author = {Rinderknecht, S. and Borsuk, M. and Reichert, P.},
+  title = {Eliciting density ratio classes},
+  journal = {International Journal of Approximate Reasoning},
+  year = {2011},
+  volume = {52},
+  pages = {792 - 804},
+  doi = {10.1016/j.ijar.2011.02.002},
+  url = {http://www.sciencedirect.com/science/article/pii/S0888613X11000491}
+}
+
 @incollection{itip-desirable,
     author    = "Erik Quaeghebeur",
     title     = "Desirability",
