--- a/bib/other-refs.bib
+++ b/bib/other-refs.bib
@@ -241,3 +241,22 @@ author = "W.F. Werner and M. Hirano and S. Kondo and G. Johanson and J.M. Lanore
   address={Berlin},
   publisher={Springer},
 }
+
+@article{1981:derobertis,
+  author = {DeRobertis, L. and Hartigan, J.A.},
+  title = {Bayesian Inference using intervals of measures},
+  journal = {The Annals of Statistics},
+  year = {1981},
+  volume = {9},
+  pages = {235--244},
+}
+
+@article{1990:berger,
+  author = {Berger, J.},
+  title = {Robust {B}ayesian analysis: sensitivity to the prior},
+  journal = {Journal of Statistical Planning and Inference},
+  year = {1990},
+  volume = {25},
+  pages = {303--328},
+}
+
