--- a/genbayesinf.tex
+++ b/genbayesinf.tex
@@ -524,7 +524,7 @@ in particular in the context of prior-data conflict (see Section~\ref{sec:imprec
 
 \subsection{Related Concepts}
 
-The theory outlined*** in Sections~\ref{sec:ip-main} and \ref{sec:imprecisebayes}
+The theory outlined in Sections~\ref{sec:ip-main} and \ref{sec:imprecisebayes}
 is of course not the only attempt to complement probability theory as tool for handling uncertainty;
 there are many other concepts with a similar aim,
 like possibilistic reasoning, fuzzy probability measures (which are also known as capacities),
@@ -535,28 +535,30 @@ lower previsions or sets of probability distributions,
 and a large part can indeed be seen as special cases of generic lower previsions, 
 or sets of probability distributions with certain restrictions%
 \footnote{A considerable part of the imprecise probability literature
-explores these links, of which \textcite{itip-special,itip-other}
+explores these links, of which Destercke and Dubois \parencite*{itip-other,itip-special}
 give a good overview.}. %***(itip-ch.\ 5,6)***
 
 As an example, consider the density-ratio class model
 \parencites{1981:derobertis}{1990:berger}, which defines
-a set of (prior) distributions $\mathcal{M}_{l,u}$ through restricting
-the densities $p(\vartheta)$ in $\mathcal{M}_{l,u}$ to
+a set of (prior) distributions on $\vartheta$ by %$\mathcal{M}_{l,u}$ by 
+%through restricting the densities $p(\vartheta)$ in $\mathcal{M}_{l,u}$ to
 \begin{align*}
-%\mathcal{M}_{l,u} = \left\{ p \right\}
-\exists c: l(\vartheta) \le c p(\vartheta) \le u(\vartheta)\,,
+\mathcal{M}_{l,u} = \left\{ p(\vartheta) :
+\exists c: l(\vartheta) \le c p(\vartheta) \le u(\vartheta)\right\}\,,
 \end{align*}
-where $l(\vartheta)$ and $u(\vartheta)$ are non-normalised densities
+where $l(\vartheta)$ and $u(\vartheta)$ are bounded non-negative functions (i.e., non-normalised densities)	
 for which $l(\vartheta) \le u(\vartheta)\ \forall\ \vartheta$.
-It is a special case of a credal set derived from generic lower previsions
+The density ratio class is a special case of the credal sets discussed in Section~\ref{sec:ip-main}
+%(derived from generic lower previsions)
 \parencite[Figure~5.5]{itip-special}***,
 with the important property that the set of posteriors derived from $\mathcal{M}_{l,u}$
 can again be expressed as a density ratio class \parencite{1981:derobertis}.
-
+Other neighbourhood models, like e.g., the $\epsilon$-contamination class,
+**** are not closed under Bayesian updating.
 
 ***\cite{2011:rinderknecht}
 
-
+IP gives thus a formal framework for robust Bayesian inference models.
 
 
 
@@ -587,6 +589,25 @@ ideas related to non-additive measures and interval probability.}
 and in recent times most prominently by scientists involved in the development of expert systems \parencite{1996:walley::expert}.
 
 ***klir citation (festschrift)***
+
+We agree with \textcite[\S 1.1]{1990:berger} in the view that there are very strong foundational arguments
+for the subjective Bayesian approach, which, however, hold only
+``if it is assumed that one can make arbitrarily fine discriminations
+in judgement about unknowns and utilities'' \parencite[p.~303]{1990:berger}. 
+It is the implications of this extremely challenging requirement
+which advocates of Bayesian inference with precise priors
+like \textcite{1987:lindley} do not seem to appreciate enough,
+and in fact, it is hardly imaginable how such ``arbitrarily fine discriminations''
+could be made in practice even for the most basic inference tasks.
+The foundational arguments for Bayesian inference are thus worthless,
+unless the requirement of arbitrarily fine precision can be relaxed.
+Indeed, the framework by \textcite{1991:walley} does just that:
+preserving the foundational arguments,
+while allowing for imprecise prior judgements.
+
+
+
+
 
 \subsection{\pdc }
 
