diss: again related concepts

--- a/genbayesinf.tex
+++ b/genbayesinf.tex
@@ -525,28 +525,32 @@ in particular in the context of prior-data conflict (see Section~\ref{sec:imprec
 \subsection{Related Concepts}
 
 The theory outlined in Sections~\ref{sec:ip-main} and \ref{sec:imprecisebayes}
-is of course not the only attempt to complement probability theory as tool for handling uncertainty;
+is of course not the only attempt to complement probability theory as tool for handling uncertainty;%
+\footnote{Some motives for going beyond usual probability measures will be discussed in Section~\refsec:motivation.}
 there are many other concepts with a similar aim,
-like possibilistic reasoning (Dempster-Safer theory),
+like possibility distributions (which often take the form of a fuzzy interval,
 or fuzzy probability measures, which are also known as capacities.
 
 In fact, many of these concepts are closely linked to
 lower previsions or sets of probability distributions,
 and a large part can indeed be seen as special cases of generic lower previsions, 
-or sets of probability distributions with certain restrictions.%
+or sets of probability distributions with certain restrictions
+\parencite[Fig.~5.5]{itip-special}.%
 A considerable part of the imprecise probability literature
 explores these links, of which Destercke and Dubois \parencite*{itip-other,itip-special}
 give a good overview.
 
-Capacities, or fuzzy measures, are set functions
+%Capacities, or fuzzy measures, are set functions
 
-	
-nevertheless useful, as more easy to handle, elicit,
-more easy to understand.
+Although less expressive than coherent lower previsions,
+these special cases can nevertheless be useful tools,
+as they may be more easy to handle or elicit for the problem at hand,
+or simply be more easy to understand.
 
-some concepts are used in a way that does not warrant
-the step beyond precise probability distributions.
-e.g., fuzzy sets with certain combination rule is same as probability.***
+%It should be stressed that there is always the possibility
+%that these concepts are used in a way that does not warrant
+%the step beyond precise probability distributions.
+%e.g., fuzzy sets with certain combination rule is same as probability.***
 
 hierarchical Bayes, distribution over intervals:
 uncertainty is averaged out for inferences,
